cmake_minimum_required(VERSION 3.31)

project(
    AdventOfCode
    VERSION 1.0
    LANGUAGES CXX
)

#Extern dependencies


# AOC Days
add_subdirectory(AOC1)
add_subdirectory(AOC2)
add_subdirectory(AOC3)
add_subdirectory(AOC4)
add_subdirectory(AOC5)
add_subdirectory(AOC6)
add_subdirectory(AOC7)
add_subdirectory(AOC8)
add_subdirectory(AOC9)
add_subdirectory(AOC10)
add_subdirectory(AOC11)
add_subdirectory(AOC12)
