cmake_minimum_required(VERSION 3.31)

project(
    AdventOfCode
    VERSION 1.0
    LANGUAGES CXX
)

#Extern dependencies


# AOC Days
add_subdirectory(AOC1)
add_subdirectory(AOC2)
add_subdirectory(AOC3)
add_subdirectory(AOC4)
add_subdirectory(AOC5)
add_subdirectory(AOC6)
add_subdirectory(AOC7)
add_subdirectory(AOC8)
add_subdirectory(AOC9)
add_subdirectory(AOC10)
add_subdirectory(AOC11)
add_subdirectory(AOC12)
add_subdirectory(AOC13)
add_subdirectory(AOC14)
add_subdirectory(AOC15)
add_subdirectory(AOC16)
add_subdirectory(AOC17)
add_subdirectory(AOC18)
add_subdirectory(AOC19)
add_subdirectory(AOC20)
add_subdirectory(AOC21)
add_subdirectory(AOC22)
add_subdirectory(AOC23)
add_subdirectory(AOC24)
